# Web-Crawling

./: README.md  products.csv  web_crawling_1.ipynb  web_crawling_2.ipynb
chapter-3-small-project/: README.md  pyproject.toml
chapter-3-small-project/src/: main.py  utils.py
chapter-3-small-project/src/parse/: base.py
chapter-3-small-project/src/search/: bing.py  engine.py  wikipedia.py
chapter-3-small-project/tests/: playwright_check.py  test_parser_integration.py
